[gd_scene load_steps=7 format=3 uid="uid://ccv5hfgti6x2s"]

[ext_resource type="Script" uid="uid://p720fpitb2qc" path="res://elements/UI/HUD/hud.gd" id="1_de6ce"]
[ext_resource type="Texture2D" uid="uid://cxc0eg6ywmqi5" path="res://assets/background.png" id="1_j43ij"]
[ext_resource type="Texture2D" uid="uid://c8avdj5qs1klg" path="res://assets/circle_1.png" id="2_n5ay0"]
[ext_resource type="Texture2D" uid="uid://fj11q3al6t66" path="res://assets/boss_ico.png" id="3_de6ce"]
[ext_resource type="Texture2D" uid="uid://dfoxeyqgynyxa" path="res://assets/apple_ico.png" id="4_gcnv8"]
[ext_resource type="PackedScene" uid="uid://coylsktu7pa40" path="res://elements/UI/HUD/knives_counter/knives_counter.tscn" id="6_de6ce"]

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1_de6ce")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_j43ij")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 717.0
offset_bottom = 1084.0
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HomeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HOME"
flat = true

[node name="PointsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="StageCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("2_n5ay0")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("2_n5ay0")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("2_n5ay0")
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("2_n5ay0")
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("3_de6ce")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2

[node name="ApplesCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ApplesCounter"]
layout_mode = 2
text = "10"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ApplesCounter"]
custom_minimum_size = Vector2(0, 95)
layout_mode = 2
texture = ExtResource("4_gcnv8")
stretch_mode = 4

[node name="StageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "STAGE 10"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="KnivesCounter" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("6_de6ce")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
